# TraceGuard

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/: report.py  run.py  tasks.py
docs/: DECISIONS.md  PRD.md  ROADMAP.md
examples/: docker-compose.yml  hello_console.py  hello_jaeger.py  hello_openllmetry.py  redaction_demo.py
spike/: redact_exporter_spike.py
src/spanredact/: __init__.py  init.py
src/spanredact/cli/: main.py
src/spanredact/policy/: modes.py
src/spanredact/redaction/: exporter.py  patterns.py
src/traceguard/: __init__.py  init.py
src/traceguard/cli/: jaeger.py  main.py
src/traceguard/policy/: modes.py
src/traceguard/redaction/: exporter.py  patterns.py  redactor.py
tests/: test_cli.py  test_exporter.py  test_patterns.py  test_redactor.py
