[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spanredact"
version = "0.1.0"
description = "Privacy-first redaction layer for OpenLLMetry / OpenTelemetry GenAI traces"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Yuxiang Jiang", email = "yj548@cornell.edu" }]
keywords = ["opentelemetry", "openllmetry", "observability", "pii", "redaction", "genai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]

# Thin layer: the only hard dependency is the OTel SDK. We do NOT force
# traceloop-sdk / a provider SDK on users — they already have OpenLLMetry.
dependencies = [
    "opentelemetry-sdk>=1.30",
    # CLI deps — small and well-maintained; worth keeping in core so
    # `spanredact diff` works out of the box after `pip install spanredact`.
    "click>=8.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
# Needed to run examples/ (real OpenLLMetry + Anthropic + .env).
examples = [
    "traceloop-sdk>=0.60",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
spanredact = "spanredact.cli.main:main"

[project.urls]
Homepage = "https://github.com/YuxiangJiangCT/SpanRedact"
Repository = "https://github.com/YuxiangJiangCT/SpanRedact"

[tool.hatch.build.targets.wheel]
packages = ["src/spanredact"]
